[gd_scene load_steps=23 format=2]

[ext_resource path="res://Code/Arquero.gd" type="Script" id=1]
[ext_resource path="res://img/1. Personaje Arquero/Medio 1.png" type="Texture" id=2]
[ext_resource path="res://img/1. Personaje Arquero/Medio 2.png" type="Texture" id=3]
[ext_resource path="res://img/1. Personaje Arquero/Medio 3.png" type="Texture" id=4]
[ext_resource path="res://img/1. Personaje Arquero/Medio 4.png" type="Texture" id=5]
[ext_resource path="res://img/1. Personaje Arquero/Medio 5.png" type="Texture" id=6]
[ext_resource path="res://img/1. Personaje Arquero/Medio 6.png" type="Texture" id=7]
[ext_resource path="res://img/1. Personaje Arquero/Medio 7.png" type="Texture" id=8]
[ext_resource path="res://img/1. Personaje Arquero/Medio 8.png" type="Texture" id=9]
[ext_resource path="res://img/1. Personaje Arquero/Medio 9.png" type="Texture" id=10]
[ext_resource path="res://img/1. Personaje Arquero/Medio 10.png" type="Texture" id=11]
[ext_resource path="res://img/1. Personaje Arquero/Medio 11.png" type="Texture" id=12]
[ext_resource path="res://img/1. Personaje Arquero/Medio disparando 1.png" type="Texture" id=13]
[ext_resource path="res://img/1. Personaje Arquero/Medio disparando 2.png" type="Texture" id=14]
[ext_resource path="res://img/1. Personaje Arquero/Medio disparando 3.png" type="Texture" id=15]
[ext_resource path="res://img/1. Personaje Arquero/Medio disparando 4.png" type="Texture" id=16]
[ext_resource path="res://img/1. Personaje Arquero/Medio disparando 5.png" type="Texture" id=17]
[ext_resource path="res://img/1. Personaje Arquero/Medio disparando 6.png" type="Texture" id=18]
[ext_resource path="res://img/1. Personaje Arquero/Medio disparando 7.png" type="Texture" id=19]
[ext_resource path="res://Music/arco.ogg" type="AudioStream" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "Run",
"speed": 11.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "Attack",
"speed": 6.8
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 24.1322
height = 69.0574

[node name="Arquero" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Animacion" type="AnimatedSprite" parent="."]
scale = Vector2( 0.068, 0.063 )
frames = SubResource( 1 )
animation = "Attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.90141, -2.23052 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 21.3888, -8.92945 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.1

[node name="Arco" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 20 )

[node name="TimerSonido" type="Timer" parent="."]
wait_time = 0.5
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerSonido" to="." method="_on_TimerSonido_timeout"]
